--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ keepalive = 60 # maximum period in seconds allowed between communications with t
 
 [thing]
 # This name will be used to declare subscriptions
-# for example if name is "weio" than topics will be :
-# weio/command, weio/reply, weio/error
-targetName = "rpi" 
+device_id = "weioA"
+command_topic = "command"
+reply_topic = "reply"
+error_topic = "error"
